# SRE-agent

./: .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml  requirements.txt
scenarios/crash_loop/: README.md
scenarios/crash_loop/manifests/: deployment-broken.yaml  deployment-fixed.yaml  namespace.yaml  oom_deployment.yaml
src/sre_agent/: __init__.py  config.py  main.py
src/sre_agent/agent/: __init__.py  orchestrator.py  prompts.py
src/sre_agent/diagnosis/: __init__.py  analyzer.py  models.py
src/sre_agent/observation/: __init__.py  collector.py  models.py
src/sre_agent/remediation/: __init__.py  actions.py
tests/: __init__.py
